--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "angular": "^1.8.3",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "rxjs": "~7.8.0",
